# vault-canister

./: CHANGELOG_SEP.md  Cargo.toml  README.md  dfx.json
.github/workflows/: main.yml
src/shared-vault-canister-backend/: Cargo.toml  shared-vault-canister-backend.did
src/shared-vault-canister-backend/src/: lib.rs  test.rs
src/vault-canister-backend/: Cargo.toml  vault-canister-backend.did
src/vault-canister-backend/src/: lib.rs
src/vault_core/: Cargo.toml
src/vault_core/src/: api.rs  lib.rs  state.rs
src/vault_core/src/api/: deserialiser.rs  deserialiser_types.rs  dev_api.rs  key_api.rs  mod.rs  serial_api.rs  vault_api.rs
src/vault_core/src/stable/: mod.rs  state.rs  types.rs  util.rs
src/vault_core/src/vault_type/: flexible_grid.rs  general_vault.rs  logins.rs  mod.rs  secure_notes.rs  spreadsheet.rs  vault_names.rs  website_logins.rs
