[package]
name = "shared-vault-canister-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
candid = "0.10"
ic-stable-structures = "0.7"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
# VetKeys helper crate (canister-side)
ic-vetkeys = "0.4"
getrandom = { version = "0.2.16", features = ["custom"] }
futures = "0.3.31"
vault_core = { path = "../vault_core" }
